@@ -27,6 +27,7 @@ SRC = \
 	03-publish-c2b-qos2-disconnect.c \
 	03-publish-c2b-qos2-len.c \
 	03-publish-b2c-qos2-len.c \
+	03-publish-b2c-qos2-unexpected-pubrel.c \
 	03-publish-c2b-qos1-receive-maximum.c \
 	03-publish-c2b-qos2-receive-maximum-1.c \
 	03-publish-c2b-qos2-receive-maximum-2.c \
